<?xml version="1.0"?>
<package>
  <name>robot_markers</name>
  <version>0.1.1</version>
  <description>Generates markers for a robot</description>

  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>transform_graph</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_kdl</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>transform_graph</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
